syntax = "proto3";

import "messages.proto";
import "google/protobuf/empty.proto";
package Actuator;

service ActuatorService {

}
